--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <header>
         <h3 class="site-title">The Grove-26</h3>
         <nav>
-            <a id="nav-1" class="nav-item" href="/delight/">Delight</a>
-            <a id="nav-2" class="nav-item" href="/about-us/">About Us</a>
-            <a id="nav-3" class="nav-item" href="/menu/">Menu</a>
-            <a id="nav-3" class="nav-item" href="/home/">Home</a>
+            <ul>
+                <li><a id="nav-1" class="nav-item" href="/delight/">Delight</a></li>
+                <li><a id="nav-2" class="nav-item" href="/about-us/">About Us</a></li>
+                <li><a id="nav-3" class="nav-item" href="/menu/">Menu</a></li>
+                <li><a id="nav-4" class="nav-item" href="/home/">Home</a></li>
+            </ul>
         </nav>
     </header>
     <div class="grid-container">
-        <article>
+        <main>
             <h4 class="main-title">
                 <div id="item-1" class="discover">Discover</div>
                 <div id="item-2" class="our-story">Our Story</div>
@@ -40,7 +42,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid enim mihi potest esse optatius quam cum Catone, omnium virtutum auctore, de virtutibus disputare? Quis non odit sordidos, vanos, leves, futtiles? Quis istum dolorem timet? 
                 </p>
             </div>
-        </article>
+        </main>
         <div id="item-5">
             <img src="assets\our-story.jpg" class="photo" />
         </div>
@@ -50,6 +52,9 @@
     </div>
 </body>
 
-<footer>Copyright 2021 | Designed with love by Xochilt</footer>
+<footer>
+    <p class="copyright">Copyright 2021 | Designed with love by Xochilt.</p>
+
+</footer>
 
 </html>
